# compiler-ta

./: .gitignore  CMakeLists.txt  readme.md
res/: compiler-ta  example.dot
res/input/: cycle.dot  determMe.dot  epsilon.dot  example.dot  home.dot  itmo.dot  linear.dot  nonDeterm.dot  problem.dot  small.dot  temp.dot  tryMinimize.dot
res/output/: test.dot
src/: CMakeLists.txt  main.cpp
src/libs/automaton/: Automaton.cpp  Automaton.h  AutomatonBuilder.cpp  AutomatonBuilder.h  AutomatonVisualizer.cpp  AutomatonVisualizer.h  CMakeLists.txt  DeterminizationAlgorithm.cpp  DeterminizationAlgorithm.h  MinimizationAlghoritm.cpp  MinimizationAlghoritm.h  MinimizationAlgorithm.cpp
src/libs/grammar/: CMakeLists.txt  Grammar.cpp  Grammar.h
src/libs/tests/: CMakeLists.txt
src/tests/: CMakeLists.txt
src/tests/automaton/: CMakeLists.txt  Determinization.test.cpp  Minimization.test.cpp
src/tests/grammar/: CmakeLists.txt
